# meilisearch-desktop

./: .gitignore  README.md  README_zh.md  create_icons.py  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/: release-drafter.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
scripts/: dev-server.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: document.rs  index_cmd.rs  key.rs  mod.rs  project.rs  search.rs  settings.rs  task.rs  utils.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/database/dao/: projects.rs
src-tauri/src/models/: project.rs
src-tauri/src/services/: meilisearch_service.rs  mod.rs  project_service.rs
src/components/common/: Empty.tsx  Loading.tsx
src/components/documents/: AddDocumentsDialog.tsx
src/components/embedder/: EmbedderForm.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  SearchLayout.tsx  Sidebar.tsx
src/components/project/: CreateProjectDialog.tsx  DeleteProjectDialog.tsx  EditProjectDialog.tsx  ProjectCard.tsx
src/components/search/: CellValue.tsx  ColumnSelector.tsx  (+4 more)
src/contexts/: ThemeContext.tsx
src/hooks/: useDocuments.ts  useIndexes.ts  useKeys.ts  useProjectStats.ts  useProjects.ts  useSearch.ts  useSettings.ts  useTasks.ts
src/i18n/: index.ts
src/pages/: AppSettings.tsx  Home.tsx  IndexDetail.tsx  ProjectDetail.tsx  Projects.tsx
src/services/: api.ts
src/types/: index.ts
(+22 files in other folders)
