[package]
name = "meilisearch-desktop"
version = "0.1.0"
description = "A Meilisearch management desktop application"
authors = ["Meilisearch Desktop Team"]
edition = "2021"

[lib]
name = "meilisearch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
csv = "1.3"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
